# sniper

./: .gitignore  CMakeLists.txt  ChangeLog.md  DataIOSvc.h  README.md  setup.sh  sniper-config.in  sniper-modulefile.in
Examples/: CMakeLists.txt
Examples/CoreUsages/: CMakeLists.txt
Examples/CoreUsages/CoreUsages/: DataIOSvc.h  DummyDataStore.h  DummySvc.h
Examples/CoreUsages/options/: run-AlgDepGraph.json  run-AlgDepGraph.py  run-DummyAlg.json  run-HelloWorld.json  run-HelloWorld.py  run-SvcAndTool.json  run-SvcAndTool.py  run-TimerUsage.json  run-TimerUsage.py  senior-1Svc2Tasks.json  senior-1Svc2Tasks.py  senior-DataIO.json  senior-DataIO.py  senior-MtSniper.json  senior-MtSniper.py  senior-StopRun.json  senior-StopRun.py  senior-SubTasks.json  senior-SubTasks.py
Examples/CoreUsages/python/: SniperCoreUsages.py
Examples/CoreUsages/src/: DataIOSvc.cc  DummyAlg.cc  DummyAlg.h  DummySvc.cc  DummyTool.cc  DummyTool.h  GraphTestAlg.cc  HelloWorld.cc  HelloWorld.h  MtSniperTest.cc  StopRunAlg.cc  StopRunAlg.h  SubTasksAlg.cc  SubTasksAlg.h  SvcAndToolAlg.cc  SvcAndToolAlg.h
Examples/DepGraphUsages/: CMakeLists.txt
Examples/DepGraphUsages/DepGraphUsages/: GraphTestAlg.h  TestAlg.h
Examples/DepGraphUsages/options/: run-AlgDepGraph.json  run-AlgDepGraph.py
Examples/DepGraphUsages/python/: DepGraphUsages.py
Examples/DepGraphUsages/src/: GraphTestAlg.cc  TestAlg.cc
Examples/DummyAlg/: CMakeLists.txt
Examples/DummyAlg/cmt/: requirements
Examples/DummyAlg/share/: run.py
Examples/DummyAlg/src/: DummyAlg.cc  DummyAlg.h  DummyTool.cc  DummyTool.h
Examples/HelloWorld/: CMakeLists.txt
Examples/HelloWorld/cmt/: requirements
Examples/HelloWorld/share/: run.py
Examples/HelloWorld/src/: Hello.cc  Hello.h
Examples/PyUsages/: CMakeLists.txt
Examples/PyUsages/options/: run-PyAndCppAlgs.py
Examples/PyUsages/src/: CppUpdateAlg.cc  CppUpdateAlg.h
Examples/RootUsages/: CMakeLists.txt
Examples/RootUsages/options/: run-WriteRootAlg.json  run-WriteRootAlg.py
Examples/RootUsages/src/: MtSniperTest.cc  WriteRootAlg.cc  WriteRootAlg.h
SniperKernel/: CMakeLists.txt  SniperConfig.h.in
SniperKernel/SniperKernel/: AlgBase.h  AlgFactory.h  AtomicFlagLockGuard.h  DLElement.h  DagBase.h  DagTask.h  DataBuffer.h  DataMemSvc.h  DataStore.h  DeclareDLE.h  DleSupervisor.h  ExecUnit.h  IDataBlock.h  IExecUnit.h  IIncidentHandler.h  Incident.h  JSONParser.h  MtSniper.h  MtSniperContext.h  MtSniperUtility.h  MtsEvtBufferRing.h  MtsIncubator.h  MtsIncubatorBase.h  MtsInterAlgDag.h  MtsMicroTask.h  MtsMicroTask4Sniper.h  MtsMicroTaskQueue.h  MtsSyncAssistant.h  MtsWorkerPool.h  NamedElement.h  Property.h  PropertyMgr.h  RefBase.h  SharedElemFactory.h  SingleThreadSniper.h  Sniper.h  SniperContext.h  SniperDataPtr.h  SniperException.h  SniperJSON.h  (+15 more)
SniperKernel/SniperPrivate/: DLEFactory.h  IncidentMgr.h  MappedDataSvc.h  MtsInterAlgDag.h  MtsInterAlgNode.h  MtsPrimaryTask.h  MtsWorkerPool.h  SharedElemMgr.h  TaskProperty.h  TaskTrigger.h  WhiteBoard.h
SniperKernel/cmt/: requirements
SniperKernel/python/Sniper/: HelloTask.py  PyAlgBase.py  __init__.py
SniperKernel/share/: HelloTask.py
SniperKernel/src/: AlgBase.cc  AlgNode.cc  DLEFactory.cc  DLElement.cc  DagTask.cc  DataMemSvc.cc  DeclareDLE.cc  DleSupervisor.cc  ExecUnit.cc  IIncidentHandler.cc  Incident.cc  IncidentMgr.cc  JSONParser.cc  MappedDataSvc.cc  MtSniper.cc  MtSniperUtility.cc  MtsEvtBufferRing.cc  MtsInterAlgDag.cc  MtsInterAlgNode.cc  MtsMicroTask4Sniper.cc  MtsMicroTaskQueue.cc  MtsPrimaryTask.cc  MtsWorkerPool.cc  NamedElement.cc  Property.cc  PropertyMgr.cc  SharedElemMgr.cc  SingleThreadSniper.cc  Sniper.cc  SniperCapsul.cc  SniperCapsule.cc  SniperContext.cc  SniperException.cc  SniperJSON.cc  SniperLog.cc  SniperTimer.cc  SniperTimerSvc.cc  SvcBase.cc  Task.cc  TaskTrigger.cc  (+5 more)
SniperKernel/src/NonUserIf/: DLEFactory.h  IncidentMgr.h  PythonCapsul.h  TaskProperty.h  TaskTrigger.h  WhiteBoard.h
SniperKernel/src/binding/: AlgBaseExp.cc  DLElementExp.cc  DataMemSvcExp.cc  IDataBlockExp.cc  IIncidentHandlerExp.cc  IncidentExp.cc  ModuleDef.cc  PropertyExp.cc  PythonCapsul.cc  SniperExp.cc  SniperRunStateExp.cc  SvcBaseExp.cc  TaskExp.cc  TaskWatchDogExp.cc  ToolBaseExp.cc  TopTaskExp.cc
SniperPolicy/: CMakeLists.txt
SniperPolicy/cmt/: requirements
SniperPolicy/cmt/fragments/: install.py  install_more_includes  install_more_includes_header  install_python  install_python_header
SniperPython/: CMakeLists.txt
SniperPython/SniperPython/: PyDataStore.h
SniperPython/lib/: PyDataStore.cc  PyDataStoreSvc.cc
SniperPython/python/: SniperPython.py
SniperPython/python/Sniper/: PyAlgBase.py  SharedElemMgr.py  __init__.py
SniperPython/src/: AlgBaseExp.cc  DLElementExp.cc  DagBaseExp.cc  DagTaskExp.cc  DataMemSvcExp.cc  ExecUnitExp.cc  IDataBlockExp.cc  IIncidentHandlerExp.cc  IncidentExp.cc  MappedDataSvcExp.cc  ModuleDef.cc  MtSniperExp.cc  MtsInterAlgDagNodeExp.cc  PropertyExp.cc  PyDataStoreExp.cc  SingleThreadSniperExp.cc  SniperExp.cc  SniperJSONExp.cc  SniperLogExp.cc  SniperRunStateExp.cc  SniperTimerExp.cc  SniperTimerSvcExp.cc  SvcBaseExp.cc  TaskExp.cc  TaskWatchDogExp.cc  ToolBaseExp.cc  TopTaskExp.cc  WorkflowExp.cc
SniperSvc/RootWriter/: CMakeLists.txt
SniperSvc/RootWriter/RootWriter/: RootWriter.h
SniperSvc/RootWriter/binding/: RootWriterBinding.cc
SniperSvc/RootWriter/cmt/: requirements
SniperSvc/RootWriter/src/: RootWriter.cc
SniperUtil/AlgGraph/: CMakeLists.txt
SniperUtil/AlgGraph/AlgGraph/: AlgGraph.h  AlgGraphBase.h
SniperUtil/AlgGraph/lib/: AlgGraph.cc  AlgGraphBase.cc  AlgNode.cc
SniperUtil/AlgGraph/python/: AlgGraph.py
SniperUtil/AlgGraph/src/: AlgGraphBaseExp.cc  AlgGraphExp.cc  ModuleDef.cc
SniperUtil/DagTask/: CMakeLists.txt
SniperUtil/DagTask/DagTask/: DagTask.h
SniperUtil/DagTask/lib/: AlgNode.h  DagTask.cc
SniperUtil/DagTask/src/: ModuleDef.cc  (+1 more)
SniperUtil/DataBuffer/: CMakeLists.txt
SniperUtil/PyDataStore/: CMakeLists.txt
SniperUtil/RootWriter/: CMakeLists.txt
SniperUtil/SniperProfiling/: CMakeLists.txt
src/: CMakeLists.txt  sniper.cc
(+71 files in other folders)
